@@ -1,3 +1,9 @@
+1998-05-14  Jim Meyering  <meyering@ascend.com>
+
+	* Makefile.am (EXTRA_DIST): Add them.
+	* jm-macros.m4: New file.
+	* utimbuf.m4: New file.
+
 1998-05-12  Jim Meyering  <meyering@ascend.com>
 
 	* Makefile.am (EXTRA_DIST): Add isc-posix.m4.
